<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/control_panel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textColor="#AAAAAA"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnToggleShow"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/toggle_show" />

        <Button
            android:id="@+id/btnToggleLock"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/toggle_lock" />

        <Button
            android:id="@+id/btnStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/change_style" />

        <Button
            android:id="@+id/btnSizeUp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/increase_size" />

        <Button
            android:id="@+id/btnSizeDown"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/decrease_size" />
            
        <!-- Placeholder for symmetry -->
        <View
             android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

    </GridLayout>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_unlocked"
        android:textColor="#FFC107"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>